#9660 Add license files and application dialog

--- a/icons.qrc
+++ b/icons.qrc
@@ -6,5 +6,6 @@
         <file>icons/fit.png</file>
         <file>icons/open.png</file>
         <file>icons/toc.png</file>
+        <file>icons/license.png</file>
     </qresource>
 </RCC>
